--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vcap = cv2.VideoCapture('harry.webm') # 0=camera\n",
+    "vcap = cv2.VideoCapture('mario_1.webm') # 0=camera\n",
     "vcopy = vcap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -39,13 +39,13 @@
     "if vcopy.isOpened():\n",
     "    width = vcopy.get(3)\n",
     "    height = vcopy.get(4)\n",
-    "    \n",
+    "#     frame = frame[240:700, 250:620]\n",
     "    print(width, height)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,18 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "while True:\n",
     "    if vcopy.grab():\n",
     "        flag, frame = vcopy.retrieve()\n",
-    "        frame = frame[240:700, 250:620] ## GoT frame part\n",
-    "#         frame = frame[240:700, 265:618] ## Female Face\n",
+    "#         frame = frame[240:700, 250:620] ## GoT frame part\n",
+    "        frame = frame[50:230, 300:550] ## Human Face - when 3 ppl are present\n",
+    "#         frame = frame[30:200, 120:300]\n",
     "#         frame = frame[0:100, 0:200]\n",
+    "        gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "        tight = cv2.Canny(frame, 400, 470)\n",
+    "        faces = face_cascade.detectMultiScale(gray,\n",
+    "                                        scaleFactor=1.3,\n",
+    "                                        minNeighbors=3,\n",
+    "                                        minSize=(30, 30))\n",
+    "        if len(faces) > 0:\n",
+    "            for (x,y,w,h) in faces:\n",
+    "                cv2.rectangle(frame,(x,y),(x+w,y+h),(255,0,0),2)\n",
+    "                frame = frame[y:y + h, x:x + w]\n",
+    "\n",
+    "#         tight = cv2.Canny(frame, 400, 470)z\n",
     "#         gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "#         contours, hierarchy = cv2.findContours(tight, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "#         cframe = cv2.drawContours(frame, contours, -1, (0,255,0), 3)\n",
